# CppProjectTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux-build.yml  mingw-build.yml  win2017-build.yml  win2019-build.yml
cmake/: Config.cmake.in  HunterGateGit.cmake  bundle.cmake.in  hunter_config.cmake  ide.cmake  install.cmake  packages.cmake  src.cmake  test.cmake
cmake/scheme/: basic_target_setting.cmake  exe.cmake  lib.cmake  test.cmake
src/CppProjectTemplate/: example.cpp  fibonacci.cmake  fibonacci.cpp  fibonacci_test.cmake  fibonacci_test.cpp  testpkg.cpp
src/CppProjectTemplate/cmakeBasedAddTargetsIn/: example.cmake
src/CppProjectTemplate/srcBasedAddTargetsIn/: hello_world.cpp
src/test/CppProjectTemplate/: fibonacci_test.cmake  fibonacci_test.cpp
test/CppProjectTemplate/: my_test.cmake  my_test.cpp
