cmake_minimum_required(VERSION 3.10.0)
if(POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)  # find_package() ought to search _ROOT variables
endif()
include(cmake/HunterGate.cmake)
set(
    HUNTER_CACHE_SERVERS
    "https://github.com/CHChang810716/hunter-binary-cache"
    CACHE
    STRING
    "Hunter cache servers"
)
HunterGate(
    URL "git@github.com:CHChang810716/hunter.git"
    SHA1 cce9a1a34e953789c553fd6d1ce4163ee3abc655
    FILEPATH ${CMAKE_CURRENT_LIST_DIR}/cmake/hunter_config.cmake
)

project(CppProjectTemplate
    LANGUAGES C CXX 
    VERSION 0.1.0.0
)
option(BUILD_TEST   "Build project with test"   OFF)
option(INSTALL_DEPS "Install dependensies"      OFF)

include(cmake/packages.cmake)
include(cmake/src.cmake)
include(cmake/ide.cmake)
include(cmake/install.cmake)
